--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -15,10 +15,9 @@
 		<get src="https://javacc.dev.java.net/files/documents/17/26777/javacc-4.0.zip" dest="${lib}/javacc-4.0.zip"/>
 		<unzip src="${lib}/javacc-4.0.zip" dest="${lib}"/>
 		<copy file="${lib}/javacc-4.0/bin/lib/javacc.jar" tofile="${lib}/javacc-4.0.jar"/>
-
-		<get src="http://mirror.switch.ch/mirror/apache/dist/jakarta/commons/collections/binaries/commons-collections-3.2.zip" dest="${lib}/commons-collections-3.2.zip"/>
-		<unzip src="${lib}/commons-collections-3.2.zip" dest="${lib}"/>
-		<copy file="${lib}//commons-collections-3.2/commons-collections-3.2.jar" tofile="${lib}/commons-collections-3.2.jar"/>
+		<get src="http://mirror.switch.ch/mirror/apache/dist/commons/collections/binaries/commons-collections-3.2.1-bin.zip" dest="${lib}/commons-collections-3.2.1.zip"/>
+		<unzip src="${lib}/commons-collections-3.2.1.zip" dest="${lib}"/>
+		<copy file="${lib}//commons-collections-3.2.1/commons-collections-3.2.1.jar" tofile="${lib}/commons-collections-3.2.1.jar"/>
 
 		<get src="http://dsd.lbl.gov/~hoschek/colt-download/releases/colt-1.2.0.zip" dest="${lib}/colt-1.2.0.zip"/>
 		<unzip src="${lib}/colt-1.2.0.zip" dest="${lib}"/>
@@ -41,7 +40,7 @@
 		depends="init,javacc"
 		description="compile the source ">
 		<javac srcdir="${src}" destdir="${bin}" source="1.5" target="1.5" fork="true" 
-			classpath="${lib}/javacc-4.0.jar:${lib}/jung-1.7.6.jar:${lib}/colt-1.2.0.jar:${lib}/commons-collections-3.2.jar" />
+			classpath="${lib}/javacc-4.0.jar:${lib}/jung-1.7.6.jar:${lib}/colt-1.2.0.jar:${lib}/commons-collections-3.2.1.jar" />
 	</target>
 
 	<target name="run" depends="compile">
